[package]
name = "tkrar"
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/nuexq/tkrar"
description = "Count frequency of words in a file or a directory"
authors = ["nuexq"]
keywords = ["cli"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "tkrar"
path = "src/main.rs"

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.35", features = ["derive"] }
color-print = "0.3.7"
once_cell = "1.21.3"
regex = "1.11.1"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.140"
stopwords = "0.1.1"
unicode-segmentation = "1.12.0"
